# defensive-suite

./: .gitignore  Makefile  README.md  SETUP.md  install.sh
.github/workflows/: ci.yml  release.yml  vm-validate.yml
agent/: Makefile  README.md  go.mod  main.go  main_test.go
agent/deploy/: ENFORCE.md  RESPONSE.md  agentd-response.env.example
agent/deploy/enforce/: dsuite-enforce-override.yaml  dsuite-enforce.yaml
agent/deploy/systemd/: agentd-response.service  agentd.service
agent/deploy/tetragon/: dsuite-observe.yaml
agent/internal/config/: config.go  config_test.go
agent/internal/correlate/: correlate.go  correlate_test.go
agent/internal/pipeline/: pipeline.go  pipeline_test.go
agent/internal/preflight/: format.go  preflight.go  preflight_test.go  report.go
agent/internal/report/: report.go  report_test.go
agent/internal/respond/: armgate.go  armgate_soak_test.go  armgate_test.go  audit.go  auto.go  auto_test.go  autoactuator.go  autoactuator_test.go  autoguards.go  autoguards_test.go  bridge_inert_test.go  executor.go  executor_audit_test.go  grace_queue.go  grace_queue_test.go  guard.go  guard_test.go  http.go  http_test.go  peraction_test.go  quarantinefd_test.go  respond.go  responder.go  responder_brakes_test.go  responder_test.go  reverse_test.go  socket.go  socket_test.go  undo_journal.go  watchdog.go  watchdog_test.go
authwatch/: DESIGN.md  Makefile  README.md  go.mod  main.go
authwatch/deploy/: README.md  authorized_keys.allow.example  config.example.json
bpfsentry/: DESIGN.md  Makefile  README.md  go.mod
bpfsentry/deploy/: README.md  config.example.json
bpfsentry/forensics/: README.md  acquire.py  oob_parser.py  vol_ebpf.py
collector/: Makefile  README.md  go.mod  main.go
collector/deploy/: README.md  collector.env.example
collector/web/: index.html
console/: README.md  UPDATING.md
console/src-tauri/: Cargo.toml  tauri.conf.json
console/src-tauri/capabilities/: default.json
console/src-tauri/src/: main.rs
credsentinel/: DESIGN.md  Makefile  README.md  go.mod  main.go
credsentinel/deploy/: README.md  config.example.json  credsentinel.env.example
dashboard/: index.html
docs/: ENDPOINT_PROTECTION.md  PHASE1_DESIGN.md  PHASE4_DESIGN.md  PHASE4_FP_SOAK.md  PHASE4_UNGATING.md  THREAT_MODEL.md  UI_REFINEMENT_PLAN.md
egresswatch/: DESIGN.md  Makefile  README.md  go.mod  main.go  sensor_ebpf.go  sensor_stub.go
egresswatch/bpf/: generate.go  loader.go  magicpacket.bpf.c
egresswatch/deploy/: README.md  config.example.json  egress.allow.example.json
instguard/: DESIGN.md  Makefile  README.md  go.mod  main.go
instguard/deploy/: README.md  config.example.json  release-meta.example.json
posturescan/: DESIGN.md  Makefile  README.md  go.mod  main.go
posturescan/deploy/: README.md  config.example.json
validation/: README.md  deploy-shadow.sh  loadbpf.c  soak-attest.sh  soak-report.sh  soak-start.sh  soak-stop.sh  validate.sh
(+175 files in other folders)
