[package]
name = "dsuite-console"
version = "0.1.0"
edition = "2021"
description = "defensive-suite desktop console"
authors = ["defensive-suite"]
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tiny blocking HTTP client to poll the local collector from the background thread
ureq = "2"

# Desktop-only plugins (same gate as the updater):
#  - updater: self-update. INERT until the operator runs `make console-keygen`
#    and pastes the PUBLIC key into tauri.conf plugins.updater.pubkey + flips
#    createUpdaterArtifacts; the PRIVATE key is a CI secret, never in this repo.
#  - single-instance: a second launch focuses the running window.
#  - autostart: launch hidden to the tray at login (on by default after 1st run).
#  - window-state: remember window size/position across restarts.
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
